# Slic3r

./: .travis.yml  Dockerfile
firstlayer.xyz/: .gitignore  CMakeLists.txt  README.md  build_slic3r.sh  modelinfo.cpp  modeljson.cpp
